# pyxtrackers

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pyxtrackers.spec  setup.py
.github/workflows/: ci.yml  release.yml
conda-recipe/: meta.yaml
pyxtrackers/: __init__.py  cli.py  cli.pyx  cli_launcher.py
pyxtrackers/bytetrack/: __init__.py  bytetrack.pyi  bytetrack.pyx  kalman_filter.pxd  kalman_filter.pyx  matching.pxd  matching.pyx
pyxtrackers/ocsort/: __init__.py  association.pxd  association.pyx  kalman_filter.pxd  kalman_filter.pyx  ocsort.pyi  ocsort.pyx
pyxtrackers/sort/: __init__.py  kalman_filter.pxd  kalman_filter.pyx  sort.pyx
pyxtrackers/utils/: __init__.py  scale.pyx
references/: cli.py
references/bytetrack/: .gitignore  byte_tracker.py  matching.py
references/ocsort/: kalmanfilter.py
references/sort/: kalman_filter.py  sort.py
scripts/: build_binary.sh  visualize.py
tests/: conftest.py  test_bytetrack_comparison.py  test_bytetrack_track32.py  test_cli.py  test_ocsort_comparison.py  test_sort_comparison.py  test_trackers.py  test_trackers_comparison.py
tests/data/: detection.jsonl
trackers/bytetrack/: .gitignore  bytetrack.pyx  matching.pxd
trackers/ocsort/: .gitignore  association.pxd  association.pyx  kalman_filter.pyx  ocsort.pyi  ocsort.pyx  ocsort_wrapper.py
trackers/sort/: .gitignore  kalman_filter.pyx  sort.pyi  sort.pyx
