[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8", "Cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxtrackers"
dynamic = ["version"]
description = "High-performance Cython implementations of SOTA multi-object trackers"
readme = "README.md"
license-files = ["LICENSE", "vendor/*/LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
]

[project.scripts]
pyxtrackers = "pyxtrackers.cli:main"

[dependency-groups]
dev = [
    "cython>=3.0",
    "pytest>=7.0",
    "filterpy>=1.4",
    "lap>=0.5",
    "setuptools>=82.0.0",
    "setuptools-scm>=8",
    "torch>=2.10.0",
    "opencv-python-headless>=4.13.0.92",
    "pyinstaller>=6.19.0",
    "altair>=5.0",
    "vl-convert-python>=1.0",
    "build>=1.0",
]

[tool.setuptools.packages.find]
include = ["pyxtrackers*"]

[tool.setuptools-scm]
version_scheme = "calver-by-date"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_*"
test-command = "python -c \"from pyxtrackers import Sort, BYTETracker, OCSort; print('OK')\""
# Each CI runner builds its native arch only (CIBW_ARCHS=auto in workflow)
