[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8", "Cython>=3.0", "numpy>=1.22"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxtrackers"
dynamic = ["version"]
description = "High-performance Cython implementations of SOTA multi-object trackers"
readme = "README.md"
license-files = ["LICENSE", "vendor/*/LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22; python_version<'3.12'",
    "numpy>=1.26; python_version>='3.12' and python_version<'3.13'",
    "numpy>=2.1; python_version>='3.13'",
]

[project.scripts]
pyxtrackers = "pyxtrackers.cli:main"

[project.optional-dependencies]
dev = [
    "Cython>=3.0",
    "pytest>=7.0",
    "filterpy>=1.4",
    "lap>=0.5",
    "pyinstaller>=6.19.0",
    "altair>=5.0",
    "vl-convert-python>=1.0",
]

[tool.setuptools.packages.find]
include = ["pyxtrackers*"]

[tool.setuptools_scm]
version_scheme = "calver-by-date"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_*"
test-command = "python -c \"from pyxtrackers import Sort, BYTETracker, OCSort; print('OK')\""
# Each CI runner builds its native arch only (CIBW_ARCHS=auto in workflow)
